2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/test_internal.py:
	  Add another test to show that the problem is in the original
	  module, 'gettext' is being added as a function.

2011-01-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Add an assertion to make sure that the alias being imported
	  was not already imported before.
	* test/test_internal.py:
	  Add a test for star imports.
	  Also triggers the assert above.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Older Python versions do not have try/except/finally.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/check.py:
	  When processing files, only return warnings about newly loaded
	  modules because of the files processed.
	* test/test_internal.py:
	  Fix up the tests now that warnings don't bleed over from one test
	  to the next.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  Prepare for keying functions on alias instead of name.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/check.py:
	* pychecker/checker.py:
	* pychecker/options.py:
	* test/test_internal.py:
	  Split out the module parts of checker.py into check.py
	  checker.py is now only either the main of the pychecker script,
	  or the side effects when importing.
	  Adjust options and test_internal to suit.

2011-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/pcmodules.py:
	  When a module is binary (for now, ".so" extension, but might
	  need to add more), don't try to setup main code and disassemble.

2011-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/warn.py:
	  Implement support for cells which are used to store variables
	  used in nested scope.
	  Instead of blindly reusing the code object to handle nested code,