@@ -1,5 +1,13 @@
 2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/pcmodules.py:
+	  Key functions on their alias instead of their own name.
+	  Resolves problem of import gettext and _ = gettext.gettext
+	* test/test_internal.py:
+	  Only one test is now left TODO.
+
+2011-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* test/test_internal.py:
 	  Add another test to show that the problem is in the original
 	  module, 'gettext' is being added as a function.
